# modelo-ventas-nmp

./: Makefile  README.md  pyproject.toml
docs/: Avance 6. Conclusiones clave. Conclusiones clave. Conclusiones clave.docx  Avance 7. Resumen ejecutivo. Resumen ejecutivo. Resumen ejecutivo.docx  mkdocs.yml
docs/docs/: index.md
notebooks/: Avance1_EDA_Equipo10.ipynb  Avance2_Equipo10.ipynb  Avance2_Equipo10_alhajas.ipynb  Avance2_FE_equipo10.ipynb  Avance3_Equipo10.ipynb  Avance4_Equipo10_Relojes.ipynb  Avance4_Equipo10_alhajas.ipynb  Avance5_Equipo10_alhajasDN.ipynb  EDA-Preprocessing Avance2_FE_alhajas_correcto.ipynb  EDA-Preprocessing Avance2_FE_relojes.ipynb  Modelo_final_equipo10.ipynb
ventasnmp/: __init__.py  dataset.py  features.py  plots.py
ventasnmp/modeling/: predict.py  train.py
