[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ventasnmp"
version = "0.0.1"
description = "Sistema de recomendaci\u00f3n inteligente para acelerar la rotaci\u00f3n de productos en la tienda en l\u00ednea de Nacional Monte de Piedad, optimizando las ventas mediante inteligencia artificial, automatizaci\u00f3n y anal\u00edtica avanzada."
authors = [
  { name = "Equipo_15" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["ventasnmp"]
include = ["pyproject.toml", "ventasnmp/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ventasnmp"]
force-sort-within-sections = true

